fix detail view overflow

--- a/styles/css-specificity.less
+++ b/styles/css-specificity.less
@@ -6,10 +6,8 @@
 
 css-specificity-detail {
   display: block;
-
-  .whitespace {
-    min-width: 1em;
-  }
+  max-height: 80vh;
+  overflow: auto;
 
   .panel-body {
     display: flex;
